# cpp_cmake_scaffold

./: .gitignore  BuildProject.ps1  CMakeLists.txt  CMakePresets.json  README.md  cmake_win_build.bat  conanfile.py  unix_build.sh  win_build.ps1
Cmake/: CPackSettings.cmake  GTestSetup.cmake  LogVariables.cmake
Doc/: ExportingLibraries.md  Links.md
Packaging/: Description.txt
Source/Client/: main.cpp
Source/DynamicLib/: Person.cpp
Source/StaticLib/: Age.cpp
Tests/: CMakeLists.txt
Tests/HeaderOnly/: CMakeLists.txt
Tests/StaticLib/: CMakeLists.txt  TestAge.cpp
cmake/: TestUtils.cmake  cpacksettings.cmake  globalsettings.cmake  gtestsetup.cmake  gtestsetup.txt.in  logvariables.cmake  target_definitions.cmake
conan/profiles/: msvc_win.txt
doc/: DependenciesCMake.md  GeneratorExpressions.md  Links.md  Misc.md  PackageManagement.md  UnitTestFrameworks.md  libraries_in_cmake.md
doc/build_tools/: ninja.md
doc/package_managers/: conan.md
examples/conan1/: CMakeLists.txt  CMakePresets.json  conanfile.py
examples/conan1/conan/: conanfile.py
examples/conan1/conan/profiles/: msvc.txt
examples/conan1/src/: bcan.h  main.cpp
examples/conan2/: CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
examples/conan2/conan/profiles/: msvc.txt
examples/conan2/src/: bcan.cpp  main.cpp
examples/conan2/test_package/: conanfile.py
packaging/: GenericWelcome.txt  LICENCE  README.md
scripts/unix/: build.sh  configure.sh  utils.sh
scripts/win/: cmake_build.bat
src/: CMakeLists.txt
src/Client/: CMakeLists.txt  main.cpp
src/DynamicLib/: CMakeLists.txt  employee.cpp
src/DynamicLib/include/BcDynamic/: BcDynApi.h  Person.h
src/DynamicLib/include/bcdynamic/: BcDynApi.h  employee.h
src/HeaderOnly/: CMakeLists.txt
src/HeaderOnly/include/BcHeaderOnly/: Utilities.h
src/HeaderOnly/include/bcheaderonly/: sort.h
src/StaticLib/: BcStaticConfig.cmake.in  CMakeLists.txt  Calculator.cpp  Calculator.h  array_algs.cpp
src/StaticLib/include/BcStatic/: Age.h
src/StaticLib/include/bcstatic/: array_algs.h
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
tests/: CMakeLists.txt
tests/DynamicLib/: CMakeLists.txt  TestPerson.cpp  test_employee.cpp
tests/HeaderOnly/: CMakeLists.txt  TestUtilities.cpp  test_sort.cpp
tests/StaticLib/: CMakeLists.txt  test_lcs.cpp
